@@ -53,6 +53,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #5628: Fix io.TextIOWrapper.read() with a unreadable buffer.
+
 - Issue #5619: Multiprocessing children disobey the debug flag and causes
   popups on windows buildbots. Patch applied to work around this issue.
 
